--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -11,11 +11,13 @@
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:background">@color/colorAccent</item>
+        <item name="android:background">@color/backgroundColor</item>
     </style>
 
 
     <style name="AppTheme.NoActionBarLaunch" parent="Theme.SplashScreen">
-        <item name="android:windowBackground">@color/splashBackground</item>
+        <item name="android:windowBackground">@color/backgroundColor</item>
     </style>
+
+    <color name="backgroundColor">#000000</color>
 </resources>
